objects/Kbase__c.object
<CustomObject>
    <fields>
        <fullName>Extraction_Quantity__c</fullName>
        <label>Extraction Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extraction_Task_Description__c</fullName>
        <label>Extraction Task Description</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tables</fullName>
                </value>
                <value>
                    <fullName>Term_Index</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>Reference ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROB_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROB Complete</label>
        <type>Checkbox</type>
    </fields>
    <label>Kbase</label>
    <nameField>
        <label>Ref ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kbases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Extraction_Quantity__c</columns>
        <columns>Extraction_Task_Description__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>